packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_exports.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@decoration/qwik';

export const [a, {b, v1: [c], d=v2, ...e}, f=v3, ...g] = obj;

const exp1 = 1;
const internal = 2;
export {exp1, internal as expr2};

export function foo() { }
export class bar {}

export default function DefaultFn() {}

export const Header = component$(() => {
    return $(() => (
        <Footer>
            <div>{a}{b}{c}{d}{e}{f}{exp1}{internal}{foo}{bar}{DefaultFn}</div>
            <div>{v1}{v2}{v3}{obj}</div>
        </Footer>
    ))
});

export const Footer = component$();

============================= header_component_uvbjufyfvdo.jsx (ENTRY POINT)==

import { qrl } from "@decoration/qwik";
export const Header_component_UVBJuFYfvDo = ()=>{
    return /*#__PURE__*/ qrl(()=>import("./header_component_1_uwm1kg0igo0"), "Header_component_1_uWM1kg0IGO0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/test.tsx\"],\"names\":[],\"mappings\":\";4CAciC,IAAM;IACnC;AAMJ\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_UVBJuFYfvDo",
  "entry": null,
  "displayName": "Header_component",
  "hash": "UVBJuFYfvDo",
  "canonicalFilename": "header_component_uvbjufyfvdo",
  "extension": "jsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    307,
    499
  ]
}
*/
============================= project/test.jsx ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const [a, { b , v1: [c] , d =v2 , ...e }, f = v3, ...g] = obj;
const exp1 = 1;
const internal = 2;
export { exp1, internal as expr2 };
export function foo() {}
export class bar {
}
export default function DefaultFn() {}
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("../header_component_uvbjufyfvdo"), "Header_component_UVBJuFYfvDo"));
export const Footer = /*#__PURE__*/ componentQrl();


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,CAAC,GAAG,EAAC,EAAC,EAAE,IAAI,CAAC,EAAE,CAAA,EAAE,GAAE,GAAE,EAAE,GAAG,GAAE,EAAE,IAAE,EAAE,EAAE,GAAG,EAAE,GAAG,IAAI;AAE7D,MAAM,OAAO;AACb,MAAM,WAAW;AACjB,SAAQ,IAAI,EAAE,YAAY,KAAK,GAAE;AAEjC,OAAO,SAAS,MAAM,CAAE,CAAC;AACzB,OAAO,MAAM;AAAK,CAAC;AAEnB,eAAe,SAAS,YAAY,CAAC,CAAC;AAEtC,OAAO,MAAM,uBAAS,+GAOnB;AAEH,OAAO,MAAM,uBAAS,eAAa\"}")
============================= header_component_1_uwm1kg0igo0.jsx (ENTRY POINT)==

import { default as DefaultFn } from "./project/test";
import { Footer } from "./project/test";
import { a } from "./project/test";
import { b } from "./project/test";
import { bar } from "./project/test";
import { c } from "./project/test";
import { d } from "./project/test";
import { e } from "./project/test";
import { exp1 } from "./project/test";
import { f } from "./project/test";
import { foo } from "./project/test";
import { expr2 as internal } from "./project/test";
export const Header_component_1_uWM1kg0IGO0 = ()=><Footer>

            <div>{a}{b}{c}{d}{e}{f}{exp1}{internal}{foo}{bar}{DefaultFn}</div>

            <div>{v1}{v2}{v3}{obj}</div>

        </Footer>;


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;;;8CAea,KACJ,OAAO;;YACJ,CAAC,KAAK,GAAG,GAAG,GAAG,GAAG,GAAG,GAAG,MAAM,UAAU,KAAK,KAAK,YAAY,IAAI;;YAClE,CAAC,KAAK,IAAI,IAAI,IAAI,MAAM,IAAI;;QAChC,EAAE\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_1_uWM1kg0IGO0",
  "entry": null,
  "displayName": "Header_component_1",
  "hash": "uWM1kg0IGO0",
  "canonicalFilename": "header_component_1_uwm1kg0igo0",
  "extension": "jsx",
  "parent": "Header_component_UVBJuFYfvDo",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    328,
    496
  ]
}
*/
== DIAGNOSTICS ==

[]
