packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_fix_dynamic_import.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@decoration/qwik';
import thing from "../state";

export function foo() {
    return import("../state")
}

export const Header = component$(() => {
    return (
        <div>
            {import("../state")}
            {thing}
        </div>
    );
});

============================= header_component_rggm7ks9qwi.tsx ==

import thing from "./project/state";
export const Header_component_RGgm7Ks9QWI = ()=>{
    return <div>

            {import("./project/state")}

            {thing}

        </div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/folder/test.tsx\"],\"names\":[],\"mappings\":\";4CAQiC,IAAM;IACnC,QACK,IAAI;;YACD,CAAC,MAAM,CAAC,mBAAY;;YACpB,CAAC,MAAM;;QACX,EAAE;AAEV\"}")
/*
{
  "origin": "project/folder/test.tsx",
  "name": "Header_component_RGgm7Ks9QWI",
  "entry": "entry_hooks",
  "displayName": "Header_component",
  "hash": "RGgm7Ks9QWI",
  "canonicalFilename": "header_component_rggm7ks9qwi",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    173,
    284
  ]
}
*/
============================= project/folder/test.tsx ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export function foo() {
    return import("../state");
}
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("../../entry_hooks"), "Header_component_RGgm7Ks9QWI"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/folder/test.tsx\"],\"names\":[],\"mappings\":\";;AAIA,OAAO,SAAS,MAAM;IAClB,OAAO,MAAM,CAAC;AAClB,CAAC;AAED,OAAO,MAAM,uBAAS,iGAOnB\"}")
============================= entry_hooks.js (ENTRY POINT)==

export { Header_component_RGgm7Ks9QWI } from "./header_component_rggm7ks9qwi";


None
== DIAGNOSTICS ==

[]
